# Archivist

./: CMakeLists.txt  conanfile.txt
plugins/parsers/: excel_loader.py  json_loader.py  loader_api.py
plugins/parsers/test/: data.json  test_json.py
src/: main.cpp  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
